--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "typed-redux-saga": "^1.3.1",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
@@ -39,5 +45,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.2",
+    "@types/redux-logger": "^3.0.9",
+    "lodash": "^4.17.21",
+    "react-redux": "^7.2.6",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6"
   }
 }
