--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.3",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.3",
     "typed-redux-saga": "^1.3.1",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.4.4",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.2",
     "@types/redux-logger": "^3.0.9",
+    "@types/styled-components": "^5.1.15",
     "lodash": "^4.17.21",
     "react-redux": "^7.2.6",
     "redux-devtools-extension": "^2.13.9",
